--- a/SWE Project/.classpath
+++ b/SWE Project/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="lib" path="C:/Users/Jeffrey Hernandez/Desktop/javafx-sdk-18/lib/javafx.swing.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Jeffrey Hernandez/Desktop/javafx-sdk-18/lib/javafx.web.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Jeffrey Hernandez/Desktop/javafx-sdk-18/lib/javafx-swt.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jeffrey Hernandez/Downloads/postgresql-42.3.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
